@@ -67,6 +67,7 @@ dillo-fltk2
  - Updated configure.in to check only for fltk2-config.
  - Implemented drag-scrolling with the mouse's middle button.
  - Disabled double buffering (good for debugging redraws).
+ - Switched dns.c from gethostbyname* to getaddrinfo.
    Patches: Johannes Hofmann
 +- Improved FLTK library detection at configure time.
    Patch: Frank Gevaerts
